--- a/FTDIDeviceControl/ftdidevicecontrol.ui
+++ b/FTDIDeviceControl/ftdidevicecontrol.ui
@@ -247,7 +247,7 @@
        </size>
       </property>
       <property name="currentIndex">
-       <number>1</number>
+       <number>3</number>
       </property>
       <widget class="QWidget" name="tab">
        <attribute name="title">
@@ -571,7 +571,7 @@
             <number>0</number>
            </property>
            <item>
-            <widget class="QLabel" name="lView">
+            <widget class="CImageLabel" name="lView">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Ignored" vsizetype="Ignored">
                <horstretch>0</horstretch>
@@ -1046,6 +1046,11 @@ background-color: grey;
    <class>CJournal</class>
    <extends>QTextEdit</extends>
    <header>Journal.h</header>
+  </customwidget>
+  <customwidget>
+   <class>CImageLabel</class>
+   <extends>QLabel</extends>
+   <header>ImageLabel.h</header>
   </customwidget>
  </customwidgets>
  <resources>
